ingress/ingress-lets-encrypt/ingress-production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - production.example.com
    secretName: letsencrypt-cluster-prod
  rules:
  - host: production.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
