ingress/ingress-lets-encrypt/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - staging.example.com
    secretName: letsencrypt-staging
  rules:
  - host: staging.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
